--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>passwordManager</description>
     <properties>
         <java.version>11</java.version>
+        <lombok.version>1.18.22</lombok.version>
     </properties>
     <dependencies>
         <dependency>
@@ -57,6 +58,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
