--- a/password-api/pom.xml
+++ b/password-api/pom.xml
@@ -49,14 +49,8 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.auth0</groupId>
-      <artifactId>java-jwt</artifactId>
-      <version>3.18.2</version>
+      <artifactId>spring-security-core</artifactId>
+      <version>5.6.2</version>
     </dependency>
 
     <dependency>
